kubernetes/apps/infrastructure/traefik/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-aritrosinha"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.ruth.aritrosinha.dpdns.org
      secretName: traefik-dashboard-cert
  rules:
    - host: traefik.ruth.aritrosinha.dpdns.org
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
